--- a/src/theme/app/_toolbar.scss
+++ b/src/theme/app/_toolbar.scss
@@ -1,12 +1,12 @@
 #app-mount {
   .title-3qD0b-,
-  .container__11d72 {
+  .container__26baa {
     background: var(--background);
   }
-  .children__32014:after {
+  .children_cde9af:after {
     content: none;
   }
-  .searchBar_e0c60b {
+  .searchBar__5a20a {
     background: var(--background-dark);
   }
 }
