--- a/src/theme/app/_tooltips.scss
+++ b/src/theme/app/_tooltips.scss
@@ -12,10 +12,10 @@
   .tooltipContent-Nejnvh {
     color: var(--text-focus);
     font-weight: var(--font-weight-bold);
-    .guildNameText__16f3c {
+    .guildNameText__2c549 {
       color: var(--text-focus);
     }
-    .muteText_dc1e9a {
+    .muteText__8f07b {
       color: var(--text-normal);
     }
   }
