--- a/src/theme/chat/_bars.scss
+++ b/src/theme/chat/_bars.scss
@@ -1,5 +1,5 @@
 #app-mount {
-  .newMessagesBar__8b6d7 {
+  .newMessagesBar__8b272 {
     background: rgb(var(--accent), 1);
     border-radius: var(--border-radius);
     top: 10px;
@@ -10,7 +10,7 @@
       font-weight: 600;
     }
   }
-  .jumpToPresentBar__0ff7f {
+  .jumpToPresentBar__69174 {
     background: var(--background-light);
     opacity: 1;
     border-radius: var(--border-radius);
@@ -21,22 +21,22 @@
     .barButtonMain-3K-jeJ {
       display: none;
     }
-    .barButtonBase__8fa46 {
+    .barButtonBase__5e4cf {
       padding: 10px;
       height: auto;
       line-height: normal;
       color: var(--text-normal);
     }
-    .spinner__20584 {
+    .spinner__645f4 {
       padding-left: 12px;
     }
   }
 
   // Reply to message
-  .attachedBars_da3c74 {
+  .attachedBars_c1606a {
     background: var(--background);
   }
-  .replyBar_b64d74 {
+  .replyBar_ed6afc {
     background: var(--background-light);
   }
 }
