--- a/src/theme/chat/_container.scss
+++ b/src/theme/chat/_container.scss
@@ -1,17 +1,17 @@
 #app-mount {
   .chat__52833 {
     background: var(--background);
-    .scrollerSpacer__9cd32 {
+    .scrollerSpacer__6b1b6 {
       height: 25px;
     }
-    .content__1a4fe:before {
+    .content__01e65:before {
       content: none;
     }
   }
-  .chatContent__5dca8 {
+  .chatContent_f087cb {
     background: transparent;
   }
-  .operations__07224 > a {
+  .operations__62559 > a {
     color: rgb(var(--accent), 1);
   }
 }
