--- a/src/theme/chat/_searchresults.scss
+++ b/src/theme/chat/_searchresults.scss
@@ -1,9 +1,9 @@
 #app-mount {
-  .searchResultsWrap__9f374 {
+  .searchResultsWrap__2e184 {
     background: var(--background-alt);
     border-top-left-radius: var(--border-radius);
   }
-  .searchHeader__19d87 {
+  .searchHeader__4d70e {
     background: var(--background-light);
     box-shadow: var(--box-shadow-alt);
     .item-3XjbnG.selected-g-kMVV {
@@ -14,7 +14,7 @@
     background: var(--background-alt);
   }
 
-  .searchResult_dcd237 {
+  .searchResult__00093 {
     border: none;
     background: var(--background-light);
     .cozy_f5c119 {
