--- a/src/theme/chat/_threads.scss
+++ b/src/theme/chat/_threads.scss
@@ -1,11 +1,11 @@
 #app-mount {
-	.container_def45c {
+	.container__694a1 {
 		background: var(--background);
 	}
-	.divider_ffec75 {
+	.divider__4df9f {
 		background: var(--background-light);
 	}
-	.container__8ee50 {
+	.container__68e43 {
 		background: transparent;
 		border: none;
 		padding-right: 8px;
