--- a/src/theme/guilds/_container.scss
+++ b/src/theme/guilds/_container.scss
@@ -1,6 +1,6 @@
 #app-mount .guilds__2b93a {
   background: var(--background-dark);
-  .scrollerBase_dc3aa9 {
+  .scrollerBase__65223 {
     background: var(--background-dark);
     &::-webkit-scrollbar {
       display: none;
