--- a/src/theme/inputs/_button.scss
+++ b/src/theme/inputs/_button.scss
@@ -1,6 +1,6 @@
 #app-mount {
   // Brand/Blurple buttons
-  .lookFilled__19298.colorBrand_b2253e {
+  .lookFilled__950dd.colorBrand__27d57 {
     background: rgb(var(--accent), 1);
     color: var(--accent-text);
     font-weight: 600;
@@ -21,7 +21,7 @@
   }
 
   // Panel buttons
-  .button_afdfd9.buttonColor_a6eb73 {
+  .button__581d0.buttonColor__7bad9 {
     background: var(--background-light);
     &:hover {
       background: rgb(var(--accent), 1);
