--- a/src/theme/inputs/_input.scss
+++ b/src/theme/inputs/_input.scss
@@ -1,4 +1,4 @@
-#app-mount .input_d266e7:not(.multiInput-1VARjC) {
+#app-mount .input_f27786:not(.multiInput-1VARjC) {
   background: var(--background);
   border: 1px solid var(--background);
   border-radius: var(--border-radius);
