--- a/src/theme/inputs/_slider.scss
+++ b/src/theme/inputs/_slider.scss
@@ -1,5 +1,3 @@
-#app-mount {
-  .barFill__30e17 {
-    background: rgb(var(--accent), 1);
-  }
+#app-mount .barFill__1f56b {
+  background: rgb(var(--accent), 1);
 }
