--- a/src/theme/members/_container.scss
+++ b/src/theme/members/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
-  .container_b2ce9c,
-  .members__9f47b,
-  .members__9f47b > div {
+  .container_f79ab4,
+  .members__573eb,
+  .members__573eb > div {
     background: transparent;
   }
 }
