--- a/src/theme/members/_member.scss
+++ b/src/theme/members/_member.scss
@@ -3,7 +3,7 @@
   .botTagRegular_c89c9a {
     background: rgb(var(--accent), 1);
     color: var(--accent-text);
-    .botText__19848 {
+    .botText_daff56 {
       font-weight: 600;
     }
   }
@@ -14,13 +14,13 @@
   &:active .layout_bb8e67 {
     background: var(--background-light);
   }
-  &.selected__9800b .layout_bb8e67 {
+  &.selected__7f4cb .layout_bb8e67 {
     background: rgb(var(--accent), 1);
     .roleColor-rz2vM0,
-    .activity__3cbac,
+    .activity_bafb94,
     .premiumIcon-1rDbWQ,
-    .username__11d8c,
-    .username__11d8c span {
+    .username_ab1e31,
+    .username_ab1e31 span {
       color: var(--accent-text) !important;
     }
     rect[fill="#43b581"],
