--- a/src/theme/modals/_deletemessage.scss
+++ b/src/theme/modals/_deletemessage.scss
@@ -1,9 +1,7 @@
-#app-mount {
-	.message__04d9f {
-		background: var(--background-alt);
-		box-shadow: none;
-		.cozy_f5c119 {
-			margin: 0 !important;
-		}
+#app-mount .message_ff43e6 {
+	background: var(--background-alt);
+	box-shadow: none;
+	.cozy_f5c119 {
+		margin: 0 !important;
 	}
 }
