--- a/src/theme/modals/_fileexpand.scss
+++ b/src/theme/modals/_fileexpand.scss
@@ -1,6 +1,4 @@
-#app-mount {
-  .modalTextContainer_ddfc28 {
-    background: var(--background-dark);
-    border: none;
-  }
+#app-mount .modalTextContainer_ce11a8 {
+  background: var(--background-dark);
+  border: none;
 }
