--- a/src/theme/modals/_modal.scss
+++ b/src/theme/modals/_modal.scss
@@ -4,13 +4,13 @@
     background: var(--background-alt);
     box-shadow: var(--box-shadow);
   }
-  .header__6d5ea {
+  .header__5e5a6 {
     box-shadow: none;
   }
   .content-18dVld {
     padding: 0 24px 24px 24px;
   }
-  .footer__89240 {
+  .footer_e0b400 {
     background: var(--background);
     box-shadow: none;
     padding: 24px;
