--- a/src/theme/modals/_userprofile.scss
+++ b/src/theme/modals/_userprofile.scss
@@ -2,9 +2,9 @@
 
   // Global styles
   .size12-oc4dx4,
-  .activityName__47e51,
-  .nameNormal__1d540,
-  .nameWrap__7263f {
+  .activityName_a7b7de,
+  .nameNormal_cb5c2b,
+  .nameWrap_b61c4b {
     color: var(--text-normal);
   }
 
@@ -68,7 +68,7 @@
   }
 
 	&[style*="--user-background"] {
-		.banner__6d414:not(.bannerPremium__42693) {
+		.banner__6d414:not(.bannerPremium__69560) {
 			height: 240px;
 			background: var(--user-background) center/cover;
 		}
