--- a/src/theme/pages/_discovery.scss
+++ b/src/theme/pages/_discovery.scss
@@ -3,7 +3,7 @@
     background: rgb(var(--accent), 1);
   }
 
-  .pageWrapper_fef757 {
+  .pageWrapper_c182d3 {
     background: var(--background);
     .input-2g-os5 {
       background: #fff;
@@ -20,12 +20,12 @@
     &:hover {
       background: var(--background-light-alt);
       box-shadow: var(--box-shadow);
-      .iconMask__1aff7 {
+      .iconMask__4092e {
         background: var(--background-light-alt);
       }
     }
   }
-  .iconMask__1aff7 {
+  .iconMask__4092e {
     border-radius: var(--border-radius);
     background: var(--background-alt);  
   }
