--- a/src/theme/popouts/_autocomplete.scss
+++ b/src/theme/popouts/_autocomplete.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.autocomplete_df266d {
+	.autocomplete__743a5 {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
-		.categoryHeader_f97a5f {
+		.categoryHeader__70c8e {
 			background: var(--background-light);
 		}
 	}
