--- a/src/theme/popouts/_emojipicker.scss
+++ b/src/theme/popouts/_emojipicker.scss
@@ -1,13 +1,13 @@
 #app-mount {
-  .contentWrapper__321ed {
+  .contentWrapper_e0bb2c {
     background: var(--background-light-alt);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .scroller_e89578::-webkit-scrollbar {
+  .scroller_ac6d1c::-webkit-scrollbar {
     display: none;
   }
-  .container_e4c233 {
+  .container_ec5ce2 {
     background: var(--background);
     border: 1px solid var(--background);
     transition: border-color .15s ease;
@@ -19,23 +19,23 @@
     }
   }
 
-  .wrapper__4f229 {
+  .wrapper__85934 {
     background: var(--background);
   }
 
 
   .list__30719 {
-    .listItems__699d1 {
+    .listItems__49027 {
       left: 0 !important;
     }
     ul[role="row"] {
       padding-left: 8px;
     }
-		.wrapper__7a35f {
+		.wrapper__91b2c {
 			background: var(--background-light-alt);
 			padding-left: 12px;
 		}
-		.inspector__993e1 {
+		.inspector__80c84 {
 			background: var(--background-light);
 		}
   }
