--- a/src/theme/popouts/_inbox.scss
+++ b/src/theme/popouts/_inbox.scss
@@ -1,12 +1,12 @@
 #app-mount {
-  .container__56e52 {
+  .container__7c2c1 {
     margin: 20px 0;
   }
-  .channelHeader__5d30c {
+  .channelHeader_ea0f89 {
     background: var(--background-light-alt);
     padding: 16px;
   }
-  .messageContainer_aa7d14 {
+  .messageContainer_cb3d47 {
     border-radius: 0 0 var(--border-radius) var(--border-radius);
     background: var(--background-alt);
   }
