--- a/src/theme/popouts/_pins.scss
+++ b/src/theme/popouts/_pins.scss
@@ -1,19 +1,19 @@
 #app-mount {
-  .messagesPopoutWrap_b3b384 {
+  .messagesPopoutWrap__10dd1 {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .header_f5cc88 {
+  .header__21b33 {
     background: var(--background-alt);
     box-shadow: var(--box-shadow);
     z-index: 2;
   }
-  .messageGroupWrapper_f8c6e9 {
+  .messageGroupWrapper__1fce2 {
     background: var(--background-alt);
     border: none;
   }
-  .messageGroupCozy__2dedd {
+  .messageGroupCozy__9d016 {
     margin: 0 !important;
     padding: 8px 8px 8px 0 !important;
   }
