--- a/src/theme/settings/guild/_roles.scss
+++ b/src/theme/settings/guild/_roles.scss
@@ -1,16 +1,16 @@
 #app-mount {
-  .sidebar_bdf6b7 {
+  .sidebar__37984 {
     border: none;
   }
-  .titleContainer_e558ff {
+  .titleContainer_d09261 {
     background: var(--background);
     box-shadow: none;
   }
-  .header__63c59 {
+  .header_ee0bd9 {
     background: var(--background);
     box-shadow: none;
   }
-  .scroller__52680 {
+  .scroller_c92337 {
     background: transparent;
   }
 }
