--- a/src/theme/sidebar/_container.scss
+++ b/src/theme/sidebar/_container.scss
@@ -1,6 +1,6 @@
 #app-mount {
-  .container__590e2,
-  .sidebar_ded4b5 {
+  .container__7e23c,
+  .sidebar_e031be {
     background: var(--background);
   }
 }
