--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -1,11 +1,11 @@
 #app-mount {
-	.privateChannels__93473 {
+	.privateChannels__9b518 {
     background: transparent;
-		.scroller__4b984 {
+		.scroller__89969 {
 			background: transparent;
 		}
   }
-  .channel_c21703 {
+  .channel__0aef5 {
     margin-left: 0;
     border-radius: 0 4px 4px 0;
     padding: 0;
