--- a/src/theme/app/_app.scss
+++ b/src/theme/app/_app.scss
@@ -7,7 +7,7 @@
   color: var(--accent-text);
 }
 
-#app-mount .info__755e1 .line__75801:first-child:before {
+#app-mount .info__755e1 .line_cdcacc:first-child:before {
   content: "MinimalCord " var(--minimalcord-version);
   display: block;
 }
