--- a/src/theme/pages/_friends.scss
+++ b/src/theme/pages/_friends.scss
@@ -1,15 +1,15 @@
 #app-mount {
-  .container__5c7e7 {
+  .container_bd15da {
     background: var(--background);
-    .title__10613 {
+    .title__4a7a9 {
       margin: 20px;
     }
   }
-  .tabBody_b3d268:before {
+  .tabBody_a90ea8:before {
     content: none;
   }
 
-  .peopleListItem_d14722 {
+  .peopleListItem_dab480 {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     border: none;
@@ -18,53 +18,53 @@
     padding: 0 15px;
     &:hover {
       background: var(--background-light);
-      .actionButton__23182 {
+      .actionButton__2b4bb {
         background: var(--background);
       }
     }
   }
-  .actionButton__23182 {
+  .actionButton__2b4bb {
     background: var(--background-dark);
   }
 
 
 
-	.scroller__00e7e {
+	.scroller__7c25e {
 		border: none;
 		padding-left: 0;
 	}
-	.container__0a6a9 {
+	.container__3673d {
 		background: var(--background);
 	}
-  .nowPlayingColumn_f5023f {
+  .nowPlayingColumn_b025fe {
     background: transparent;
   }
-  .nowPlayingScroller_dce5c0 {
+  .nowPlayingScroller__5cd67 {
     padding: 20px;
   }
   .header-13Cw0- {
     padding: 0 0 20px 0;
   }
-  .emptyCard_f82dde {
+  .emptyCard__204d9 {
     background: var(--background-alt);
     border-radius: var(--border-radius);
   }
 
-  .wrapper__6e669 {
+  .wrapper__3c6d5 {
     background: var(--background-alt);
     border-radius: var(--border-radius);
 		border: none;
     &:hover {
       background: var(--background-light);
-      .inset__0bfb3 {
+      .inset__61d5b {
         background: var(--background-alt);
       }
     }
   }
-	.section_efc22d {
+	.section__253ec {
 		background: var(--background-light);
 	}
-  .inset__0bfb3 {
+  .inset__61d5b {
     background: var(--background);
   }
 }
