--- a/src/theme/sidebar/_header.scss
+++ b/src/theme/sidebar/_header.scss
@@ -1,18 +1,18 @@
 #app-mount {
-  .selected__0b1ad .header__104ca {
+  .selected__987e6 .header__77c95 {
     background: transparent;
   }
-  .header__104ca {
+  .header__77c95 {
     box-shadow: none;
     &:hover {
       background: transparent;
     }
   }
 
-  .searchBar_e4ea2a {
+  .searchBar__621ec {
     box-shadow: none;
   }
-  .searchBarComponent__22760 {
+  .searchBarComponent__8f95f {
     background: var(--background-dark);
   }
 }
