--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -2,12 +2,12 @@
   .panels__58331 {
     background: var(--background);
   }
-  .activityPanel__22355
-  .container_ca50b9 {
+  .activityPanel_b73e7a
+  .container_debb33 {
     background: transparent;
   }
-  .container_ca50b9,
-  .activityPanel__22355 {
+  .container_debb33,
+  .activityPanel_b73e7a {
     background: transparent;
     border: none;
   }
