fix: settings class update

--- a/src/theme/settings/_global.scss
+++ b/src/theme/settings/_global.scss
@@ -53,12 +53,12 @@
   }
 
 
-  .sidebarRegionScroller__1fa7e {
+  .sidebarRegionScroller__8113e {
     background: var(--background-dark);
   }
 
-  .contentRegionScroller__86c79,
-  .contentRegion__0bec1 {
+  .contentRegionScroller__9ae20,
+  .contentRegion__08eba {
     background: var(--background);
   }
 
